# multi-corpus-governance-agent

./: .env.example  .gitignore  AUTHORS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  PHASE3_CODE_STRUCTURE_CHECKLIST.md  PROTOCOLS.md  README.md  SECURITY.md  SETUP.md  STUBS.md  agents.md  context-assembly.md  governance.md  personal-search.md  published-search.md  pyproject.toml  requirements.txt  routing-matrix.md  setup.md  setup.py  social-search.md
alembic/: env.py
alembic/versions/: 20250902_fts_and_indexes.py  20250912_initial_schema.py
article/: first_draft.md  full_bundle.md
docs/: API.md  Complete Understanding_ Personal Assistant Voice Replication System.md  Comprehensive Alignment Analysis_ Documentation, Implementation, and MVLM Architecture.md  Final MVLM Architecture Understanding_ Text Generation vs. Governance Reasoning.md  IMPLEMENTATION_PLAN.md  Modular Implementation Strategy for Multi-Corpus Governance Agent.md  POCP-Compat.md  REVISED_IMPLEMENTATION_PLAN.md  TODO_CHECKLIST.md  implementation.md  project-status.md
docs/diagrams/: system-flow-with-feedback.dot  system-flow-with-matrix.dot  system-flow.dot  system-flow.txt
docs/ops/: ingest-personal.md  ingest-published.md  ingest-social.md  pgbouncer.ini.example  postgres.conf.example
docs/ops/k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
docs/project-status/: manus.md  todo_mcg_agent.md
docs/security/: README.md
docs/security/architecture/: security-architecture.md
docs/security/compliance/: deployment-security.md
docs/security/incident-response/: incident-response-playbook.md
docs/security/protocols/: governance-protocol.md
scripts/: entrypoint.sh  health-check.sh  healthcheck.sh  init-db.sh  run-tests.sh  setup.sh  start-dev.sh  start-prod.sh  validate-env.sh
src/: docker-compose.yml
src/mcg_agent/: __init__.py  app.py  config.py  requirements.txt
src/mcg_agent/agents/: __init__.py  base_agent.py  ideator.py  ideator_agent.py  voice_aware_critic.py  voice_aware_drafter.py  voice_aware_ideator.py  voice_aware_revisor.py  voice_aware_summarizer.py
src/mcg_agent/api/: app.py  auth.py  session_manager.py
src/mcg_agent/api/routers/: __init__.py  agents.py  auth.py  health.py  monitoring.py
src/mcg_agent/assistant/: __init__.py  complete_assistant_integration.py  context_aware_responder.py  conversation_manager.py  intent_analyzer.py  personal_assistant_core.py
src/mcg_agent/assistant/protocols/: __init__.py  assistant_protocol.py
src/mcg_agent/assistant/task_automation/: __init__.py  task_automation_engine.py
src/mcg_agent/cli/: __init__.py  commands.py  config.py  main.py  smoke.py  smoke_tests.py
src/mcg_agent/database/: models.py  session.py
src/mcg_agent/db/: models_personal.py  models_published.py  models_social.py  session.py
src/mcg_agent/generation/: openai_provider.py  provider_interface.py
src/mcg_agent/governance/: __init__.py  api_limits.py  call_tracker.py  context.py  decorators.py  personal_data_governance.py  protocol.py
src/mcg_agent/ingest/: __init__.py  personal_chatgpt_export.py  published_loader.py  seed.py  social_loader.py
src/mcg_agent/metadata/: __init__.py  models.py
src/mcg_agent/mvlm/: __init__.py  personal_voice_mvlm_manager.py  provider.py  voice_aware_text_generator.py
src/mcg_agent/optimizer/: response_optimizer.py
src/mcg_agent/protocols/: __init__.py  context_protocol.py  governance_protocol.py  punctuation_protocol.py  routing_protocol.py
src/mcg_agent/pydantic_ai/: __init__.py  agent_base.py  governance_validation.py  personal_voice_agent.py  secure_tools.py
src/mcg_agent/quality/: validators.py
src/mcg_agent/routing/: __init__.py  pipeline.py
src/mcg_agent/search/: __init__.py  connectors.py  models.py  tools.py
src/mcg_agent/security/: __init__.py  audit_trail.py  governance_enforcer.py  jwt_auth.py  personal_data_encryption.py  personal_voice_audit_trail.py  voice_pattern_access_control.py  waf_integration.py  zero_trust.py
src/mcg_agent/utils/: __init__.py  agent_logger.py  audit.py  cache.py  exceptions.py  logging.py  memory_manager.py  pipeline_stats.py  punctuation.py  security_logger.py
src/mcg_agent/voice/: __init__.py  voice_fingerprint_applicator.py  voice_fingerprint_extractor.py
src/mcg_agent/voice_features/: __init__.py
src/mcg_agent/voice_features/adapters/: __init__.py  audience_voice_adapter.py  context_voice_adapter.py  dynamic_voice_adapter.py
src/mcg_agent/voice_features/learning/: __init__.py  evolution_tracker.py  feedback_processor.py  voice_learning_system.py
src/mcg_agent/voice_features/monitoring/: __init__.py  voice_consistency_monitor.py  voice_drift_detector.py
src/mcg_agent/voice_features/protocols/: __init__.py  voice_adaptation_protocol.py  voice_learning_protocol.py  voice_monitoring_protocol.py
tests/: conftest.py  test_api_limits.py  test_auth_required_on_endpoints.py  test_governance_protocol.py  test_punctuation_enforcement_in_pipeline.py  test_punctuation_protocol.py  test_quality_validator_and_optimizer.py  test_routing_protocol_and_pipeline.py  test_search_tools_and_context.py
tests/api/endpoints/: test_agents_api.py
tests/integration/: test_agent_integration.py
tests/security/: test_governance_protocol.py
tests/unit/agents/: test_ideator_agent.py
